--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   build_paper:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout [${{ github.repository }}]
